fix package and vite config

--- a/package.json
+++ b/package.json
@@ -1,38 +1,39 @@
 {
-  "name": "profile",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "antd": "^5.14.1",
-    "gh-pages": "^6.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scroll": "^1.9.0",
-    "react-simple-typewriter": "^5.0.1",
-    "smoothscroll-polyfill": "^0.4.4"
-  },
-  "devDependencies": {
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
-    "@types/react-scroll": "^1.8.10",
-    "@types/smoothscroll-polyfill": "^0.3.4",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitejs/plugin-react": "^4.2.1",
-    "eslint": "^8.56.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "sass": "^1.70.0",
-    "typescript": "^5.2.2",
-    "vite": "^5.1.0"
-  }
+	"homepage": "https://lime4512.github.io/profile/",
+	"name": "profile",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"predeploy": "npm run build",
+		"deploy": "gh-pages -d dist",
+		"build": "tsc && vite build",
+		"lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"antd": "^5.14.1",
+		"gh-pages": "^6.1.1",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0",
+		"react-scroll": "^1.9.0",
+		"react-simple-typewriter": "^5.0.1",
+		"smoothscroll-polyfill": "^0.4.4"
+	},
+	"devDependencies": {
+		"@types/react": "^18.2.55",
+		"@types/react-dom": "^18.2.19",
+		"@types/react-scroll": "^1.8.10",
+		"@types/smoothscroll-polyfill": "^0.3.4",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"@vitejs/plugin-react": "^4.2.1",
+		"eslint": "^8.56.0",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-react-refresh": "^0.4.5",
+		"sass": "^1.70.0",
+		"typescript": "^5.2.2",
+		"vite": "^5.1.0"
+	}
 }
