--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"homepage": "https://lime4512.github.io/profile/",
+	"homepage": "https://.github.io/profile",
 	"name": "profile",
 	"private": true,
 	"version": "0.0.0",
